--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "easyimage": "^2.1.0",
     "express": "^4.14.0",
     "multiparty": "^4.1.2",
-    "opencv": "^5.0.0"
+    "opencv": "^5.0.0",
+    "request": "^2.74.0",
+    "socket.io": "^1.4.8"
   }
 }
